# project_card

./: README.md  decorators.py  main.py  pyproject.toml
src/: decorators.py  external_api.py  generators.py  mask.py  processing.py  readers.py  utils.py  widget.py
tests/: test_decorators.py  test_external_api.py  test_generators.py  test_masks.py  test_processing.py  test_readers.py  test_utils.py  test_widgets.py
